# MetaMove2

./: .gitattributes  .gitignore  .gitmodules  README.md
_archive/config/config/: MOC.cfg  SIO.cfg  SYS.cfg
_memory/: PLAN.md  task.md
ai-services/: README.md  tcp_echo_probe.py
ai-services/metamove_tools/: README.md  __init__.py  client.py  requirements.txt  smoke_test.py
bridge/: README.md
bridge/egm-bridge/: Dockerfile  README.md  activate_servo.py  control_console.py  docker-compose.yml  dpp_orchestrate_win.py  egm_bridge_identity.py  egm_bridge_servo.py  inject_command.py  joint_jog_test.py  playback_console.py  relay_speed_console.py  rescue_jog.py  rws2_fix_module.py  rws2_loadmod.py  sm_egm_pulser.py  teleop_console.py  teleop_keyboard.py
bridge/egm-mock/: .gitignore  README.md  _test_client.py  egm_mock.py
deploy/dashboard/: dashboard.Dockerfile  docker-compose.slim.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
docker/perception/: Dockerfile  docker-compose.yml  requirements.txt  server.py
docs/: ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  gesture-vocabulary.md  safety-anchor-test.md  ui-panels.md
docs/markers/: Körper22.stl  generate.py
docs/technical/: 01_distance_speed_scaling.md  02_pinch_move_teleop.md  03_dashboard_hmi.md  README.md  conf.py  index.md  installation.md  reference.md  reproduce.md  requirements.txt
docs/ui-mockups/: metamove-ui.html
robotstudio/: GoHolo_Simulation.rspag  README.txt  dpp_egm_drive.py  dpp_j1_test.yaml  dpp_j5_30_home.yaml  dpp_j6_to_zero.yaml  dpp_lab_gui.py  dpp_lab_waypoints.yaml  dpp_safe_test.yaml  gofa_dpp_log.py  gofa_dynamic.py  gofa_dynamic_20260508_102433.json  gofa_dynamic_20260508_102526.json  gofa_dynamic_20260508_102642.json  gofa_snapshot.py  moveit_to_egm.py
robotstudio/backups/20260507_095156/: MetaMoveJoint.cfg  MetaMoveUC.cfg  ROB_Michi.xml  UDPUC_HOST_all_instances.xml
robotstudio/gofa_snapshot_20260423/: README.md
robotstudio/gofa_snapshot_20260423/fs/: _root.json  listing__BACKUP.json  listing__BACKUP_15000-500126_Backup_20220728.json  listing__HOME.json  (+23 more)
robotstudio/rapid/: MetaMoveCore.mod  MetaMoveCorePers.mod  MetaMoveDispatcher.mod  MetaMoveJointStream.mod  MetaMoveJointStreamFix.mod  README.md  ROB_1_udpuc.cfg
robotstudio/tcp_bridge_test/: MetaMoveCoreTCPLatencyTest.mod  README.md  tcp_echo_latency.py
ros2/_archived/: README.md
ros2/_archived/goholo_task_primitives/: CMakeLists.txt  COLCON_IGNORE  package.xml
ros2/_archived/goholo_task_primitives/launch/: pick_place.launch.py
ros2/_archived/goholo_task_primitives/src/: pick_place_node.cpp
ros2/abb_egm_rws_managers/: .clang-format
ros2/abb_gofa_custom/abb_crb15000_gazebo/: CMakeLists.txt  package.xml
ros2/abb_gofa_custom/abb_crb15000_gazebo/config/: gazebo_controllers.yaml
ros2/abb_gofa_custom/abb_crb15000_gazebo/launch/: bringup.launch.py
ros2/abb_gofa_custom/abb_crb15000_gazebo/urdf/: abb_crb15000.urdf.xacro
ros2/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fake_joint_publisher.py  joint_state_loopback.py  phantom_ik_stub.py
ros2/docker/metamove_bridge/: SIM_SERVO_README.md  _probe.sh  axis_check.py  axis_test.py  cmd_vs_state.py  dpp_waypoints.yaml  measure_chain.py  measure_chain2.py  package.xml  probe_rws.py  servo_autostart.py  setup.cfg  setup.py  start_servo_rclpy.py
ros2/docker/metamove_bridge/config/: dpp_waypoints.yaml
ros2/docker/metamove_bridge/launch/: bridge.launch.py  metamove_rviz.launch.py  metamove_sim_ik.launch.py  metamove_sim_playback.launch.py  moveit_ik_loop.launch.py  octomap_test.launch.py  servo_pose_loop.launch.py  servo_pose_loop_v2.launch.py  sim_servo.launch.py
ros2/docker/metamove_bridge/metamove_bridge/: bridge_node.py  distance_speed_scaler.py  dpp_gui.py  dpp_orchestrate.py  dpp_playback.py  dpp_teach.py  egm_pb2.py  fake_cloud_publisher.py  fake_head_pub.py  fake_joint_state_publisher.py  joint_feedback_relay.py  jtc_egm_stub.py  jtc_servo_relay.py  moveit_ik_relay.py  moveit_to_egm.py  pose_to_twist_node.py
ros2/test/: e2e_twist_send.sh
unity-quest/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+606 files in other folders)
