<?xml version="1.0"?>
<package format="3">
  <name>goholo_task_primitives</name>
  <version>0.1.0</version>
  <description>MoveIt Task Constructor primitives for GoHolo: pick, place, move_to, home.</description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>abb_crb15000_moveit</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
