<?xml version="1.0"?>
<package format="3">
  <name>abb_crb15000_gazebo</name>
  <version>0.1.0</version>
  <description>
    Gazebo Sim (headless) bringup for the ABB CRB 15000 (GoFa-5/0.95). Provides
    a URDF with proper inertias (sourced from MerlinLaboratory/ABB_omnicore_ros_driver,
    BSD), ros2_control configuration with gz_ros2_control/GazeboSimSystem hardware
    interface, controllers + launch for offline Phantom-IK closed-loop testing.
  </description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
